# lotusx

./: .clippy.toml  .env.template  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  latency_report.md  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: ADDING_NEW_EXCHANGE.md  COMPREHENSIVE_INTEGRATION_TESTS_SUMMARY.md  FUNDING_RATES_IMPLEMENTATION_GUIDE.md  INTEGRATION_TESTING.md  KERNEL_CODEC_USAGE.md  PHASE_1_COMPLETION_SUMMARY.md  README_LATENCY_TEST.md  SECURITY_GUIDE.md  TECHNICAL_PROGRESS.md  TYPE_SYSTEM_MIGRATION_PLAN.md  UNIFIED_TYPES_IMPLEMENTATION.md  changelog.md  coding_cheatsheet.md  hft_latency_report_template.md  hft_latency_summary.md  hyperliquid_analysis.md  hyperliquid_improvement_plan.md  kernel_refactor.md  next_move_0704.md
docs/hft/: hft_latency_report_2024.md
docs/kernel_refactor/: 0709.md  EXCHANGE_REFACTOR_GUIDE.md  KERNEL_REFACTOR_DIFF_SUMMARY.md  kernel_refactor.md  structure_exchange.md
docs/project_general/: PROJECT_ANALYSIS.md  PROJECT_ANALYSIS_REWRITE.md  QUALITY_IMPROVEMENT_PLAN.md
docs/types/: TYPE_SYSTEM_MIGRATION_PLAN.md
examples/: backpack_example.rs  backpack_kernel_example.rs  backpack_streams_example.rs  basic_usage.rs  bybit_example.rs  connection_test.rs  custom_latency_test.rs  env_file_example.rs  hyperliquid_example.rs  hyperliquid_websocket_test.rs  klines_example.rs  latency_test.rs  okx_example.rs  paradex_example.rs  secure_config_example.rs  websocket_example.rs  websocket_test.rs
src/: lib.rs  main.rs
src/core/: config.rs  errors.rs  mod.rs  traits.rs  types.rs  websocket.rs
src/core/kernel/: codec.rs  mod.rs  rest.rs  signer.rs  ws.rs
src/exchanges/: mod.rs
src/exchanges/backpack/: account.rs  builder.rs  client.rs  codec.rs  connector.rs  converters.rs  market_data.rs  mod.rs  rest.rs  signer.rs  trading.rs  types.rs
src/exchanges/backpack/connector/: account.rs  market_data.rs  mod.rs  trading.rs
src/exchanges/binance/: account.rs  auth.rs  builder.rs  client.rs  codec.rs  connector.rs  conversions.rs  converters.rs  market_data.rs  mod.rs  rest.rs  signer.rs  trading.rs  types.rs
src/exchanges/binance/connector/: account.rs  market_data.rs  mod.rs  trading.rs
src/exchanges/binance_perp/: account.rs  builder.rs  client.rs  codec.rs  conversions.rs  converters.rs  market_data.rs  mod.rs  rest.rs  signer.rs  trading.rs  types.rs
src/exchanges/binance_perp/connector/: account.rs  market_data.rs  mod.rs  trading.rs
src/exchanges/bybit/: account.rs  auth.rs  builder.rs  client.rs  codec.rs  conversions.rs  converters.rs  market_data.rs  mod.rs  rest.rs  signer.rs  trading.rs  types.rs
src/exchanges/bybit/connector/: account.rs  market_data.rs  mod.rs  trading.rs
src/exchanges/bybit_perp/: account.rs  builder.rs  client.rs  codec.rs  converters.rs  market_data.rs  mod.rs  rest.rs  signer.rs  trading.rs  types.rs
src/exchanges/bybit_perp/connector/: account.rs  market_data.rs  mod.rs  trading.rs
src/exchanges/hyperliquid/: account.rs  auth.rs  builder.rs  client.rs  codec.rs  conversions.rs  converters.rs  market_data.rs  mod.rs  rest.rs  signer.rs  trading.rs  types.rs  websocket.rs
src/exchanges/hyperliquid/connector/: account.rs  market_data.rs  mod.rs  trading.rs
src/exchanges/okx/: builder.rs  codec.rs  conversions.rs  mod.rs  rest.rs  signer.rs  types.rs
src/exchanges/okx/connector/: account.rs  market_data.rs  mod.rs  trading.rs
src/exchanges/paradex/: account.rs  auth.rs  builder.rs  client.rs  codec.rs  conversions.rs  converters.rs  market_data.rs  mod.rs  rest.rs  signer.rs  trading.rs  types.rs  websocket.rs
src/exchanges/paradex/connector/: account.rs  market_data.rs  mod.rs  trading.rs
src/utils/: exchange_factory.rs  latency_testing.rs  mod.rs
tests/: binance_integration_tests.rs  bybit_integration_tests.rs  funding_rates_tests.rs  integration_test_config.rs  simple_integration_tests.rs
