[package]
name = "lotusx"
version = "0.1.0"
edition = "2021"
description = "Multi-exchange cryptocurrency perpetual futures trading platform"
license = "MIT"
repository = "https://github.com/createMonster/lotusx"
keywords = ["cryptocurrency", "trading", "futures", "binance", "exchange"]
categories = ["api-bindings", "finance", "cryptocurrency"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2.5"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some pedantic lints that might be too strict
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Temporarily allow these while fixing gradually
must_use_candidate = "allow"
missing_const_for_fn = "allow"
uninlined_format_args = "allow"
unused_self = "allow"
assigning_clones = "allow"
needless_pass_by_value = "allow"
cast_possible_truncation = "allow"
cast_lossless = "allow"
return_self_not_must_use = "allow"
ignored_unit_patterns = "allow"
redundant_closure_for_method_calls = "allow"
unused_async = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
